--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "next-auth": "^4.24.7",
     "react": "^18",
     "react-dom": "^18",
+    "style-components": "^0.1.0",
     "winston": "^3.13.0"
   },
   "devDependencies": {
