--- a/package.json
+++ b/package.json
@@ -18,11 +18,14 @@
     "axios": "^1.7.2",
     "cryptr": "^6.3.0",
     "jwt-decode": "^4.0.0",
+    "lucide-react": "^0.395.0",
     "next": "14.2.3",
     "next-auth": "^4.24.7",
     "react": "^18",
     "react-dom": "^18",
+    "react-dropzone": "^14.2.3",
     "style-components": "^0.1.0",
+    "tailwind-merge": "^2.3.0",
     "winston": "^3.13.0",
     "zod": "^3.23.8"
   },
