--- a/package.json
+++ b/package.json
@@ -17,8 +17,10 @@
     "@mui/material": "^5.15.18",
     "axios": "^1.7.2",
     "cryptr": "^6.3.0",
+    "formidable": "^3.5.1",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.395.0",
+    "multer": "^1.4.5-lts.1",
     "next": "14.2.3",
     "next-auth": "^4.24.7",
     "react": "^18",
