--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@emotion/styled": "^11.11.5",
     "@mui/icons-material": "^5.15.18",
     "@mui/material": "^5.15.18",
+    "@react-pdf-viewer/core": "^3.12.0",
     "axios": "^1.7.2",
     "cryptr": "^6.3.0",
     "formidable": "^3.5.1",
@@ -23,9 +24,11 @@
     "multer": "^1.4.5-lts.1",
     "next": "14.2.3",
     "next-auth": "^4.24.7",
+    "pdfjs-dist": "^3.0.279",
     "react": "^18",
     "react-dom": "^18",
     "react-dropzone": "^14.2.3",
+    "react-pdf": "^9.0.0",
     "style-components": "^0.1.0",
     "tailwind-merge": "^2.3.0",
     "winston": "^3.13.0",
