--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@cyntler/react-doc-viewer": "^1.16.3",
     "@edgestore/react": "^0.1.6",
     "@edgestore/server": "^0.1.6",
     "@emotion/react": "^11.11.4",
